Renamed entry point for getting license files from history
