# api/openapi.yaml
@@ -98,9 +98,9 @@ paths:
                 $ref: '#/components/schemas/Error'
           description: Unexpected error
       summary: Returns list of all issues if license files to the specified client
-  /licenseFile/{clientId}/{timeOfIssue}:
+  /historyLicenseFile/{clientId}/{timeOfIssue}:
     get:
-      operationId: licenseFile
+      operationId: historyLicenseFile
       parameters:
       - explode: false
         in: path
